--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {},
+  "scripts": {
+    "dev": "cd packages/test-page && pnpm dev",
+    "build": "cd packages/skia && pnpm build"
+  },
   "devDependencies": {}
 }
