--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "dev": "cd packages/test-page && pnpm dev",
     "build": "cd packages/skia && pnpm build"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "2.8.7",
+    "prettier-plugin-tailwindcss": "^0.6.9"
+  }
 }
