--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "cd packages/skia && pnpm build"
   },
   "devDependencies": {
-    "prettier": "2.8.7",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
+    "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9"
-  }
+  },
+  "type": "module"
 }
